Config string conexao e models

--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -1,5 +1,5 @@
 <h1>Formulario de Cadastro de Clientes</h1>
-<form action="">
+<form action="cadastrar" method="POST">
     <div>
         <!-- <label for="name">Nome:</label> -->
         <input type="text" name="name" id="name" placeholder="Nome">
@@ -9,10 +9,10 @@
     <br>
     <div>
         <!-- <label for="email">Email:</label> -->
-        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="text" name="email" id="email" placeholder="Email">
         <!-- <label for="phone">Telefone:</label> -->
-        <input type="phone" name="phone" id="phone" placeholder="Telefone">
+        <input type="text" name="phone" id="phone" placeholder="Telefone">
     </div>
     <br>
-    <button>Cadastrar</button>
+    <button type="submit">Cadastrar</button>
 </form>
