--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,9 @@
 <h2>Home - Listar clientes</h2>
+
+{{#each pessoas}}
+    <h3>Nome: {{dataValues.name}}</h3>
+    <h3>Sobrenome: {{dataValues.lastName}}</h3>
+    <h3>Email: {{dataValues.email}}</h3>
+    <h3>Telefone: {{dataValues.phone}}</h3>
+    <hr>
+{{/each}}
